[package]
name = "cyclic_anim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = { version = "0.8.1", features = [ "_ndarrayl" ] }
argmin-math = { version = "0.2", features = ["ndarray_latest-serde", "nalgebra_latest-serde"] }
nalgebra = { version = "0.32.3", features = ["rand"] }
ndarray = "0.15.6"
rand = "0.8.5"
